--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,13 +2,3 @@
   font-family: 'Gidole';
   src: url('./fonts/Gidole-Regular.otf');
 }
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('./fonts/Montserrat-Bold.ttf');
-}
-
-@font-face {
-  font-family: 'Montserrat-Slim';
-  src: url('./fonts/Montserrat-Regular.ttf');
-}
