--- a/src/styles/blocks/_map.scss
+++ b/src/styles/blocks/_map.scss
@@ -25,7 +25,7 @@
 }
 
 .leaflet-control-attribution {
-  background-color: rgba(0, 0, 0, 0.6) !important;
+  background-color: cc(dark) !important;
   color: white;
   font-size: rem(7) !important;
 
