--- a/src/styles/landing/base/_helpers.scss
+++ b/src/styles/landing/base/_helpers.scss
@@ -42,7 +42,7 @@
 
   &:focus {
     border-radius: 2px;
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 2px 2px cc(dark);
     clip: auto !important;
     display: block;
     @include font-size(8, mobile, true, false, true);
